# ML

./: linear-regression.py  main.py  polynomial-regression.py  pyproject.toml  test.py
Decision Tree/: model2.py
Decision-Tree/: model.py
Random-Forest/: classification-model.py  regression-model.py
classification/: naive-byes.py
regression/: logistic-regression.py  multiple-regression.py  polinomial-regression.csv  regression-demo.py  svc.py
